--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
-  velocity_x: ^3.3.0
+  velocity_x: ^3.3.0 
+  http: ^0.13.5
   
 
 dev_dependencies:
